fix: make spacing symmetrical for piped-list component

--- a/src/scss/components/piped-list/_piped-list.scss
+++ b/src/scss/components/piped-list/_piped-list.scss
@@ -1,28 +1,20 @@
 @use "../../tokens/color" as *;
 @use "../../tokens/font" as *;
+@use "../../base/mixins";
 
 .iati-piped-list {
+  @include mixins.unstyled-list();
   display: flex;
   flex-wrap: wrap;
-  gap: 0.5em;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
   & > * {
     line-height: 1;
-    position: relative;
+    padding: 0.2em;
+    &:not(:first-child) {
+      padding-left: 1em;
+    }
     &:not(:last-child) {
-      &:after {
-        content: "";
-        position: absolute;
-        right: 1rem;
-        height: 120%;
-        width: 1px;
-        display: block;
-        background-color: currentColor;
-        top: -10%;
-      }
-      padding-inline-end: 2rem;
+      border-right: 1px solid black;
+      padding-right: 1em;
     }
   }
 }
